--- a/archives/toutiao-search/2023-10-27.md
+++ b/archives/toutiao-search/2023-10-27.md
@@ -1,64 +1,88 @@
 # 2023-10-27
 
-共 215 条
+共 239 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 27 2023 12:00:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Oct 27 2023 13:00:56 GMT+0800 (China Standard Time) -->
 1. [李克强同志逝世](https://so.toutiao.com/search?keyword=李克强同志逝世)
 1. [王毅会见美国国务卿布林肯](https://so.toutiao.com/search?keyword=王毅会见美国国务卿布林肯)
 1. [从“三季报”看我国经济韧性和活力](https://so.toutiao.com/search?keyword=从“三季报”看我国经济韧性和活力)
-1. [看完李佳琦直播京东采销再降1500元](https://so.toutiao.com/search?keyword=看完李佳琦直播京东采销再降1500元)
+1. [印度军队向巴基斯坦开火](https://so.toutiao.com/search?keyword=印度军队向巴基斯坦开火)
 1. [中美金融工作组举行第一次会议](https://so.toutiao.com/search?keyword=中美金融工作组举行第一次会议)
+1. [幼儿园防暴演练厨师抄锅铲追进教室](https://so.toutiao.com/search?keyword=幼儿园防暴演练厨师抄锅铲追进教室)
+1. [小伙自掏腰包53万帮村里修路](https://so.toutiao.com/search?keyword=小伙自掏腰包53万帮村里修路)
+1. [李大霄：谁都不可能通过做空祖国赚钱](https://so.toutiao.com/search?keyword=李大霄：谁都不可能通过做空祖国赚钱)
+1. [河南货车司机怒赞西安高速绿通](https://so.toutiao.com/search?keyword=河南货车司机怒赞西安高速绿通)
+1. [重庆辟谣取消职工医保个人账户](https://so.toutiao.com/search?keyword=重庆辟谣取消职工医保个人账户)
+1. [欧盟争吵数天后就巴以问题达成一致](https://so.toutiao.com/search?keyword=欧盟争吵数天后就巴以问题达成一致)
+1. [安葬30年的亡父坟上又埋新坟](https://so.toutiao.com/search?keyword=安葬30年的亡父坟上又埋新坟)
+1. [曝以色列考虑“让步”换取人质获释](https://so.toutiao.com/search?keyword=曝以色列考虑“让步”换取人质获释)
 1. [妈妈晒儿女房间：天差地别](https://so.toutiao.com/search?keyword=妈妈晒儿女房间：天差地别)
-1. [贵州省委办公厅副主任陈丽萍被查](https://so.toutiao.com/search?keyword=贵州省委办公厅副主任陈丽萍被查)
-1. [沪指收复3000点](https://so.toutiao.com/search?keyword=沪指收复3000点)
+1. [小米魔改存储芯片](https://so.toutiao.com/search?keyword=小米魔改存储芯片)
+1. [看完李佳琦直播京东采销再降1500元](https://so.toutiao.com/search?keyword=看完李佳琦直播京东采销再降1500元)
+1. [美军向中东增派近千名士兵](https://so.toutiao.com/search?keyword=美军向中东增派近千名士兵)
+1. [邻桌模仿聋哑人称其哑巴双方起冲突](https://so.toutiao.com/search?keyword=邻桌模仿聋哑人称其哑巴双方起冲突)
+1. [王毅会见布林肯传递哪些关键信息](https://so.toutiao.com/search?keyword=王毅会见布林肯传递哪些关键信息)
+1. [中国石化：公司累计分红5600亿](https://so.toutiao.com/search?keyword=中国石化：公司累计分红5600亿)
+1. [玉渊谭天：加州提醒美国机不可失](https://so.toutiao.com/search?keyword=玉渊谭天：加州提醒美国机不可失)
+1. [国安部：有境外组织搜集我用户数据](https://so.toutiao.com/search?keyword=国安部：有境外组织搜集我用户数据)
 1. [烈士陵园树枝掰开竟是五角星图案](https://so.toutiao.com/search?keyword=烈士陵园树枝掰开竟是五角星图案)
+1. [知情人：朱迅尼格买提仍在央视工作](https://so.toutiao.com/search?keyword=知情人：朱迅尼格买提仍在央视工作)
+1. [匈牙利与欧盟爆发“口水战”](https://so.toutiao.com/search?keyword=匈牙利与欧盟爆发“口水战”)
+1. [楼盘开工挂十几个政府部门祝贺条幅](https://so.toutiao.com/search?keyword=楼盘开工挂十几个政府部门祝贺条幅)
+1. [男子3次强奸七旬独居老人获刑6年](https://so.toutiao.com/search?keyword=男子3次强奸七旬独居老人获刑6年)
+1. [小米14+澎湃OS能否乘胜追击](https://so.toutiao.com/search?keyword=小米14+澎湃OS能否乘胜追击)
+1. [面粉中含滑石粉？官方抽检结果出炉](https://so.toutiao.com/search?keyword=面粉中含滑石粉？官方抽检结果出炉)
+1. [前扁办主任：柯文哲还有第二选择](https://so.toutiao.com/search?keyword=前扁办主任：柯文哲还有第二选择)
+1. [小米14提前发布是谁给的底气](https://so.toutiao.com/search?keyword=小米14提前发布是谁给的底气)
+1. [瑙鲁总统遭倒阁下台引台媒关注](https://so.toutiao.com/search?keyword=瑙鲁总统遭倒阁下台引台媒关注)
+1. [官方回应职校集体退学：已新招老师](https://so.toutiao.com/search?keyword=官方回应职校集体退学：已新招老师)
+1. [李佳琦卖假和田玉？品牌方：已报警](https://so.toutiao.com/search?keyword=李佳琦卖假和田玉？品牌方：已报警)
+1. [德媒：欧盟峰会“话题多争议大”](https://so.toutiao.com/search?keyword=德媒：欧盟峰会“话题多争议大”)
+1. [元稹之妻裴淑墓葬在陕西被发现](https://so.toutiao.com/search?keyword=元稹之妻裴淑墓葬在陕西被发现)
+1. [公交上男子站姿怪异乘客暖心救助](https://so.toutiao.com/search?keyword=公交上男子站姿怪异乘客暖心救助)
+1. [小米为什么要自研操作系统](https://so.toutiao.com/search?keyword=小米为什么要自研操作系统)
+1. [航天员实现天地往返的“生命之舟”](https://so.toutiao.com/search?keyword=航天员实现天地往返的“生命之舟”)
+1. [668万外卖小哥等有了“新型社保”](https://so.toutiao.com/search?keyword=668万外卖小哥等有了“新型社保”)
+1. [媒体：中国将推动新一轮“房改”](https://so.toutiao.com/search?keyword=媒体：中国将推动新一轮“房改”)
+1. [CBA：青岛国信水产胜南京头排苏酒](https://so.toutiao.com/search?keyword=CBA：青岛国信水产胜南京头排苏酒)
+1. [李佳琦直播间违反《反垄断法》吗](https://so.toutiao.com/search?keyword=李佳琦直播间违反《反垄断法》吗)
+1. [埃及靠近以色列边境城镇遭导弹袭击](https://so.toutiao.com/search?keyword=埃及靠近以色列边境城镇遭导弹袭击)
+1. [专家谈儿童精神科爆满现象](https://so.toutiao.com/search?keyword=专家谈儿童精神科爆满现象)
+1. [孙子兵法被列为美国监狱禁书](https://so.toutiao.com/search?keyword=孙子兵法被列为美国监狱禁书)
+1. [利拉德雄鹿首秀仍是超巨模样](https://so.toutiao.com/search?keyword=利拉德雄鹿首秀仍是超巨模样)
+1. [德国大使馆官号“破防”背后](https://so.toutiao.com/search?keyword=德国大使馆官号“破防”背后)
+1. [贵州省委办公厅副主任陈丽萍被查](https://so.toutiao.com/search?keyword=贵州省委办公厅副主任陈丽萍被查)
+1. [美国缅因州大规模枪击案嫌犯仍在逃](https://so.toutiao.com/search?keyword=美国缅因州大规模枪击案嫌犯仍在逃)
+1. [沪指收复3000点](https://so.toutiao.com/search?keyword=沪指收复3000点)
 1. [女子深夜疑遭家暴？救人者发声](https://so.toutiao.com/search?keyword=女子深夜疑遭家暴？救人者发声)
 1. [合肥警方辟谣“高校学生捅人”](https://so.toutiao.com/search?keyword=合肥警方辟谣“高校学生捅人”)
 1. [古特雷斯解释后以色列仍要求其辞职](https://so.toutiao.com/search?keyword=古特雷斯解释后以色列仍要求其辞职)
-1. [面粉中含滑石粉？官方抽检结果出炉](https://so.toutiao.com/search?keyword=面粉中含滑石粉？官方抽检结果出炉)
-1. [邻桌模仿聋哑人称其哑巴双方起冲突](https://so.toutiao.com/search?keyword=邻桌模仿聋哑人称其哑巴双方起冲突)
-1. [埃及靠近以色列边境城镇遭导弹袭击](https://so.toutiao.com/search?keyword=埃及靠近以色列边境城镇遭导弹袭击)
-1. [小伙自掏腰包53万帮村里修路](https://so.toutiao.com/search?keyword=小伙自掏腰包53万帮村里修路)
 1. [朗迪制药被责令停产停业整顿30天](https://so.toutiao.com/search?keyword=朗迪制药被责令停产停业整顿30天)
-1. [国安部：有境外组织搜集我用户数据](https://so.toutiao.com/search?keyword=国安部：有境外组织搜集我用户数据)
-1. [孙子兵法被列为美国监狱禁书](https://so.toutiao.com/search?keyword=孙子兵法被列为美国监狱禁书)
 1. [哈马斯“大杀器”袭击以色列后方](https://so.toutiao.com/search?keyword=哈马斯“大杀器”袭击以色列后方)
 1. [曝45岁男子炒股欠贷百万爆仓销户](https://so.toutiao.com/search?keyword=曝45岁男子炒股欠贷百万爆仓销户)
-1. [玉渊谭天：加州提醒美国机不可失](https://so.toutiao.com/search?keyword=玉渊谭天：加州提醒美国机不可失)
 1. [女方1500万购房丈夫却出轨多名男性](https://so.toutiao.com/search?keyword=女方1500万购房丈夫却出轨多名男性)
-1. [男子3次强奸七旬独居老人获刑6年](https://so.toutiao.com/search?keyword=男子3次强奸七旬独居老人获刑6年)
-1. [知情人：朱迅尼格买提仍在央视工作](https://so.toutiao.com/search?keyword=知情人：朱迅尼格买提仍在央视工作)
-1. [中国石化：公司累计分红5600亿](https://so.toutiao.com/search?keyword=中国石化：公司累计分红5600亿)
-1. [668万外卖小哥等有了“新型社保”](https://so.toutiao.com/search?keyword=668万外卖小哥等有了“新型社保”)
 1. [龙洲股份一字涨停晋级6连板](https://so.toutiao.com/search?keyword=龙洲股份一字涨停晋级6连板)
 1. [新一轮油价调整11月7日开启](https://so.toutiao.com/search?keyword=新一轮油价调整11月7日开启)
-1. [官方回应职校集体退学：已新招老师](https://so.toutiao.com/search?keyword=官方回应职校集体退学：已新招老师)
 1. [巴方：加沙已有7000多人死于以轰炸](https://so.toutiao.com/search?keyword=巴方：加沙已有7000多人死于以轰炸)
 1. [iPhone 15提前降价导致销量锐减](https://so.toutiao.com/search?keyword=iPhone+15提前降价导致销量锐减)
 1. [媒体揭秘航天员“专列”长二F火箭](https://so.toutiao.com/search?keyword=媒体揭秘航天员“专列”长二F火箭)
 1. [大空头狙击美债爆赚180亿](https://so.toutiao.com/search?keyword=大空头狙击美债爆赚180亿)
-1. [李佳琦直播间违反《反垄断法》吗](https://so.toutiao.com/search?keyword=李佳琦直播间违反《反垄断法》吗)
 1. [利拉德与字母哥的挡拆组合初露锋芒](https://so.toutiao.com/search?keyword=利拉德与字母哥的挡拆组合初露锋芒)
 1. [吉林预计秋粮年产量850亿斤](https://so.toutiao.com/search?keyword=吉林预计秋粮年产量850亿斤)
 1. [养老金现身91只股前十大流通股东榜](https://so.toutiao.com/search?keyword=养老金现身91只股前十大流通股东榜)
-1. [小米14提前发布是谁给的底气](https://so.toutiao.com/search?keyword=小米14提前发布是谁给的底气)
 1. [媒体：双11消费者不必追求极致低价](https://so.toutiao.com/search?keyword=媒体：双11消费者不必追求极致低价)
 1. [专家称老年人有生理需求很正常](https://so.toutiao.com/search?keyword=专家称老年人有生理需求很正常)
 1. [合肥发布3名干部任前公示](https://so.toutiao.com/search?keyword=合肥发布3名干部任前公示)
-1. [小米为什么要自研操作系统](https://so.toutiao.com/search?keyword=小米为什么要自研操作系统)
 1. [太阳揭幕战险胜勇士 布克砍32分](https://so.toutiao.com/search?keyword=太阳揭幕战险胜勇士+布克砍32分)
 1. [世贸调低今年全球货物贸易量增速](https://so.toutiao.com/search?keyword=世贸调低今年全球货物贸易量增速)
 1. [男子欠钱不还嫌好友唠叨火烧好友家](https://so.toutiao.com/search?keyword=男子欠钱不还嫌好友唠叨火烧好友家)
 1. [布莱顿2-0阿贾克斯获队史欧战首胜](https://so.toutiao.com/search?keyword=布莱顿2-0阿贾克斯获队史欧战首胜)
-1. [德国大使馆官号“破防”背后](https://so.toutiao.com/search?keyword=德国大使馆官号“破防”背后)
-1. [李佳琦卖假和田玉？品牌方：已报警](https://so.toutiao.com/search?keyword=李佳琦卖假和田玉？品牌方：已报警)
 1. [物业断电堵门强逼业主签字缴停车费](https://so.toutiao.com/search?keyword=物业断电堵门强逼业主签字缴停车费)
 1. [美国宣布新一轮1.5亿美元对乌军援](https://so.toutiao.com/search?keyword=美国宣布新一轮1.5亿美元对乌军援)
 1. [朝鲜女足主帅：有计划地针对中国队](https://so.toutiao.com/search?keyword=朝鲜女足主帅：有计划地针对中国队)
 1. [两大爷醉驾拖拉机撞上机动车](https://so.toutiao.com/search?keyword=两大爷醉驾拖拉机撞上机动车)
 1. [巴方称以在加沙投超1.2万吨爆炸物](https://so.toutiao.com/search?keyword=巴方称以在加沙投超1.2万吨爆炸物)
-1. [安葬30年的亡父坟上又埋新坟](https://so.toutiao.com/search?keyword=安葬30年的亡父坟上又埋新坟)
 1. [俄方与哈马斯代表在莫斯科会晤](https://so.toutiao.com/search?keyword=俄方与哈马斯代表在莫斯科会晤)
 1. [欧洲央行暂停加息](https://so.toutiao.com/search?keyword=欧洲央行暂停加息)
 1. [商务部详解Q3外贸：进出口逐季抬升](https://so.toutiao.com/search?keyword=商务部详解Q3外贸：进出口逐季抬升)
